text-align fix

--- a/resources/5/style.css
+++ b/resources/5/style.css
@@ -1,12 +1,9 @@
-/* Konténer a dobozokhoz */
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 5px; 
 }
-
-/* Stílus a szövegdobozokhoz */
 .box {
     border: 2px solid #4CAF50; 
     padding: 15px;
@@ -14,11 +11,9 @@
     background-color: #f9f9f9;
     width: 100%;
     max-width: 400px; 
-    text-align: center;
+    text-align: left;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
-
-/* Mobilbarát megjelenés */
 @media (min-width: 768px) {
     .container {
         flex-direction: row;
